analysis/symbol-light-classes/testData/lightClassByFqName/compilationErrors/FieldWithoutName3.kt
// MyClass

// KTIJ-24121
class MyClass<T>(val value: T) {
    fun getValAsString(): T {
        return value.toString()
    }
    val
}
